# Segments-Runner

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_build.txt  setup.py
models/: efficientnet-edgetpu-M_quant_segment_0_of_2.tflite  mobilenet_v2_1.0_224_inat_bird_quant_segment_1_of_3.tflite  mobilenet_v2_1.0_224_inat_bird_quant_segment_1_of_3_edgetpu.tflite  mobilenet_v2_1.0_224_inat_bird_quant_segment_2_of_3.tflite  tf2_ssd_mobilenet_v2_coco17_ptq_segment_0_of_3_edgetpu.tflite  tf2_ssd_mobilenet_v2_coco17_ptq_segment_1_of_3.tflite  tf2_ssd_mobilenet_v2_coco17_ptq_segment_2_of_3.tflite  tf2_ssd_mobilenet_v2_coco17_ptq_segment_2_of_3_edgetpu.tflite
segments_runner/: segments_runner.py
test/: classification_org_test.py  classification_seg_test.py  detection_org_test.py  detection_seg_test.py
test_data/model/: efficientnet-edgetpu-M_quant_segment_1_of_2.tflite  mobilenet_v2_1.0_224_inat_bird_quant_edgetpu.tflite  mobilenet_v2_1.0_224_inat_bird_quant_segment_0_of_3.tflite  mobilenet_v2_1.0_224_inat_bird_quant_segment_0_of_3_edgetpu.tflite  mobilenet_v2_1.0_224_inat_bird_quant_segment_2_of_3_edgetpu.tflite  tf2_ssd_mobilenet_v2_coco17_ptq_segment_0_of_3.tflite  tf2_ssd_mobilenet_v2_coco17_ptq_segment_1_of_3_edgetpu.tflite
tests/: classification_org_test.py  classification_seg_test.py  detection_org_test.py  detection_seg_test.py
