[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segments_runner"
version = "0.1.3"
description = "Run multiple segments of EdgeTPU models in sequence"
authors = [{ name = "Changhun Han", email = "ehwjs1914@naver.com" }]
readme = "README.md"
keywords = ["EdgeTPU", "segments", "runner"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
license = { file = "LICENSE" }
dependencies = ["numpy==1.26.4"]


[tool.setuptools.packages.find]
exclude = ["test*"]

[project.urls]
"Homepage" = "https://github.com/HanChangHun/SegmentsRunner"
"Repository" = "https://github.com/HanChangHun/SegmentsRunner"
"Issues" = "https://github.com/HanChangHun/SegmentsRunner/issues"


[project.optional-dependencies]
coral = [
    "tflite-runtime @ https://github.com/google-coral/pycoral/releases/download/v2.0.0/tflite_runtime-2.5.0.post1-cp39-cp39-linux_x86_64.whl#sha256=132f8c184b99d69e40040d8067eb962d9435cd2579f5563c33b8673d257d353d",
    "pycoral @ https://github.com/google-coral/pycoral/releases/download/v2.0.0/pycoral-2.0.0-cp39-cp39-linux_x86_64.whl#sha256=77c81c64a99119019c0d65ae9b1af25d2856ab6057dac27d3ea64dac963bef16",
]
